Switch to build versions of javascript

--- a/stringmatching.html
+++ b/stringmatching.html
@@ -128,7 +128,7 @@
         where a match is detected. A red circle shows the current point in
         the simulation.</p>
     </div>
-<script data-main="src/stringmatching.js" src="./require.js"></script>
+<script data-main="build/stringmatching.js" src="./require.js"></script>
 </body>
 
 </html>
